Update file paths in HTML and CSS files to use absolute paths for assets and scripts

--- a/frontend/staff-view/log.html
+++ b/frontend/staff-view/log.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Log</title>
-    <link rel="stylesheet" href="./styles/log.css">
-    <script src="./scripts/jQuery v3.7.1.js"></script>
+    <link rel="stylesheet" href="/frontend/staff-view/styles/log.css">
+    <script src="/frontend/staff-view/scripts/jQuery v3.7.1.js"></script>
 </head>
 
 <body>
     <nav class="header">
         <div class="logoContain">
-            <img src="./assets/24388.svg" alt="">
+            <img src="/frontend/staff-view/assets/24388.svg" alt="">
         </div>
         <div class="forMobile">
             <div class="navHeadName">
                 John Doe
             </div>
             <div class="navImg">
-                <img src="./assets/johndoe.png" alt="">
+                <img src="/frontend/staff-view/assets/johndoe.png" alt="">
             </div>
         </div>
     </nav>
@@ -42,7 +42,7 @@
                     Month 1
                 </div>
                 <div class="checkBox">
-                    <img src="./assets/CheckCircle.svg" alt="">
+                    <img src="/frontend/staff-view/assets/CheckCircle.svg" alt="">
                 </div>
             </div>
             <div class="btnContain" data-month="2">
@@ -50,7 +50,7 @@
                     Month 2
                 </div>
                 <div class="checkBox">
-                    <img src="./assets/CheckCircle.svg" alt="">
+                    <img src="/frontend/staff-view/assets/CheckCircle.svg" alt="">
                 </div>
             </div>
             <div class="btnContain" data-month="3">
@@ -58,7 +58,7 @@
                     Month 3
                 </div>
                 <div class="checkBox">
-                    <img src="./assets/CheckCircle.svg" alt="">
+                    <img src="/frontend/staff-view/assets/CheckCircle.svg" alt="">
                 </div>
             </div>
             <div class="btnContain" data-month="4">
@@ -66,7 +66,7 @@
                     Month 4
                 </div>
                 <div class="checkBox">
-                    <img src="./assets/CheckCircle.svg" alt="">
+                    <img src="/frontend/staff-view/assets/CheckCircle.svg" alt="">
                 </div>
             </div>
             <div class="btnContain" data-month="5">
@@ -74,7 +74,7 @@
                     Month 5
                 </div>
                 <div class="checkBox">
-                    <img src="./assets/CheckCircle.svg" alt="">
+                    <img src="/frontend/staff-view/assets/CheckCircle.svg" alt="">
                 </div>
             </div>
             <div class="btnContain" data-month="6">
@@ -82,7 +82,7 @@
                     Month 6
                 </div>
                 <div class="checkBox">
-                    <img src="./assets/CheckCircle.svg" alt="">
+                    <img src="/frontend/staff-view/assets/CheckCircle.svg" alt="">
                 </div>
             </div>
 
@@ -90,7 +90,7 @@
         <div class="activeBtnMobile">
             <div class="monthContain" id="monthContain">
                 <div class="caretDown">
-                    <img src="./assets/CaretDown.svg" alt="">
+                    <img src="/frontend/staff-view/assets/CaretDown.svg" alt="">
 
                 </div>
                 <div class="month1">
@@ -154,7 +154,7 @@
                     </div>
                     <div class="cardPhoto">
                         <div class="studentPhoto">
-                            <img src="./assets/johndoe.png" alt="">
+                            <img src="/frontend/staff-view/assets/johndoe.png" alt="">
 
                         </div>
 
@@ -170,7 +170,7 @@
                     <div class="majorInfoContain">
                         <div class="uniContain">
                             <div class="uniIcon">
-                                <img src="./assets/Student.png" alt="">
+                                <img src="/frontend/staff-view/assets/Student.png" alt="">
                             </div>
                             <div class="Uni">
                                 Yale University
@@ -179,7 +179,7 @@
                         </div>
                         <div class="uniContain">
                             <div class="uniIcon">
-                                <img src="./assets/GraduationCap.png" alt="">
+                                <img src="/frontend/staff-view/assets/GraduationCap.png" alt="">
                             </div>
                             <div class="Uni">
                                 400L
@@ -188,7 +188,7 @@
                         </div>
                         <div class="uniContain">
                             <div class="uniIcon">
-                                <img src="./assets/Clock.png" alt="">
+                                <img src="/frontend/staff-view/assets/Clock.png" alt="">
                             </div>
                             <div class="Uni">
                                 6 Months
@@ -197,7 +197,7 @@
                         </div>
                         <div class="uniContain">
                             <div class="uniIcon">
-                                <img src="./assets/Vector.png" alt="">
+                                <img src="/frontend/staff-view/assets/Vector.png" alt="">
                             </div>
                             <div class="Uni">
                                 johndoe@gmail.com
@@ -223,7 +223,7 @@
                             Week 1
                         </div>
                         <div class="checkBox2">
-                            <img src="./assets/CheckCircle.svg" alt="">
+                            <img src="/frontend/staff-view/assets/CheckCircle.svg" alt="">
                         </div>
                     </div>
                     <div class="weekBtn" data-week="2">
@@ -231,7 +231,7 @@
                             Week 2
                         </div>
                         <div class="checkBox2">
-                            <img src="./assets/CheckCircle.svg" alt="">
+                            <img src="/frontend/staff-view/assets/CheckCircle.svg" alt="">
                         </div>
                     </div>
                     <div class="weekBtn" data-week="3">
@@ -239,7 +239,7 @@
                             Week 3
                         </div>
                         <div class="checkBox2">
-                            <img src="./assets/CheckCircle.svg" alt="">
+                            <img src="/frontend/staff-view/assets/CheckCircle.svg" alt="">
                         </div>
                     </div>
                     <div class="weekBtn" data-week="4">
@@ -247,7 +247,7 @@
                             Week 4
                         </div>
                         <div class="checkBox2">
-                            <img src="./assets/CheckCircle.svg" alt="">
+                            <img src="/frontend/staff-view/assets/CheckCircle.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -334,7 +334,7 @@
                             <div class="accordionHeader">
                                 <div class="mobileDay1">Monday</div>
                                 <div class="caretDown2">
-                                    <img src="./assets/CaretDown.svg" alt="">
+                                    <img src="/frontend/staff-view/assets/CaretDown.svg" alt="">
                                 </div>
                             </div>
                             <div class="accordionContent">
@@ -348,7 +348,7 @@
                             <div class="accordionHeader">
                                 <div class="mobileDay1">Tuesday</div>
                                 <div class="caretDown2">
-                                    <img src="./assets/CaretDown.svg" alt="">
+                                    <img src="/frontend/staff-view/assets/CaretDown.svg" alt="">
                                 </div>
                             </div>
                             <div class="accordionContent">
@@ -362,7 +362,7 @@
                             <div class="accordionHeader">
                                 <div class="mobileDay1">Wednesday</div>
                                 <div class="caretDown2">
-                                    <img src="./assets/CaretDown.svg" alt="">
+                                    <img src="/frontend/staff-view/assets/CaretDown.svg" alt="">
                                 </div>
                             </div>
                             <div class="accordionContent">
@@ -376,7 +376,7 @@
                             <div class="accordionHeader">
                                 <div class="mobileDay1">Thursday</div>
                                 <div class="caretDown2">
-                                    <img src="./assets/CaretDown.svg" alt="">
+                                    <img src="/frontend/staff-view/assets/CaretDown.svg" alt="">
                                 </div>
                             </div>
                             <div class="accordionContent">
@@ -390,7 +390,7 @@
                             <div class="accordionHeader">
                                 <div class="mobileDay1">Friday</div>
                                 <div class="caretDown2">
-                                    <img src="./assets/CaretDown.svg" alt="">
+                                    <img src="/frontend/staff-view/assets/CaretDown.svg" alt="">
                                 </div>
                             </div>
                             <div class="accordionContent">
@@ -415,7 +415,7 @@
                         She is a fast learner and she’s making good progress.
                     </div>
                     <div class="signature">
-                        <img src="./assets/Vector.svg" alt="">
+                        <img src="/frontend/staff-view/assets/Vector.svg" alt="">
                     </div>
 
                 </div>
@@ -425,7 +425,7 @@
 
         </div>
     </section>
-    <script src="./scripts/log.js"></script>
+    <script src="/frontend/staff-view/scripts/log.js"></script>
 </body>
 
 </html>
