--- a/frontend/staff-view/studentProfile.html
+++ b/frontend/staff-view/studentProfile.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Profile</title>
-    <link rel="stylesheet" href="./styles/studentProfile.css">
-    <script src="./scripts/jQuery v3.7.1.js"></script>
+    <link rel="stylesheet" href="/frontend/staff-view/styles/studentProfile.css">
+    <script src="/frontend/staff-view/scripts/jQuery v3.7.1.js"></script>
 </head>
 
 <body>
     <nav class="header">
         <div class="logoContain">
-            <img src="./assets/24388.svg" alt="">
+            <img src="/frontend/staff-view/assets/24388.svg" alt="">
         </div>
     </nav>
     <section class="bodyContain">
         <div class="heading">
             <div class="headingContain">
                 <div class="backArrow">
-                    <img src="./assets/Icons copy 3.svg" alt="">
+                    <img src="/frontend/staff-view/assets/Icons copy 3.svg" alt="">
 
                 </div>
                 <div class="headTxt">
@@ -39,7 +39,7 @@
             <div class="photoNname">
                 <div class="profilePhoto">
                     <div class="photoBox">
-                        <img src="./assets/johndoe.png" alt="">
+                        <img src="/frontend/staff-view/assets/johndoe.png" alt="">
 
                     </div>
                     <div class="uploadBox" id="uploadTrigger">
@@ -197,8 +197,8 @@
         </div>
 
     </section>
-    <script src="./scripts/studentProfile.js"></script>
-    <script src="./routes/homeRoutes.js"></script>
+    <script src="/frontend/staff-view/scripts/studentProfile.js"></script>
+    <script src="/frontend/staff-view/routes/homeRoutes.js"></script>
 </body>
 
 </html>
