--- a/frontend/supervisor-view/homeListView.html
+++ b/frontend/supervisor-view/homeListView.html
@@ -7,7 +7,7 @@
     <title>homeList View</title>
 
     <!-- External CSS -->
-    <link rel="stylesheet" href="./styles/homeListView.css">
+    <link rel="stylesheet" href="/frontend/supervisor-view/styles/homeListView.css">
 </head>
 
 <body>
@@ -18,14 +18,14 @@
     <nav class="mainNav">
         <!-- Logo -->
         <div class="headerLogo">
-            <img src="./ASSETS/24388.svg" alt="App Logo">
+            <img src="/frontend/supervisor-view/ASSETS/24388.svg" alt="App Logo">
         </div>
 
         <!-- Sign Out Button -->
         <div class="signout" id="signout">
             <div class="sText" id="sText">Sign Out</div>
             <div class="sIcon">
-                <img src="./assets/logbntsvg.svg" alt="Logout Icon">
+                <img src="/frontend/supervisor-view/assets/logbntsvg.svg" alt="Logout Icon">
             </div>
         </div>
     </nav>
@@ -50,7 +50,7 @@
                 <!-- Search by Name -->
                 <div class="searchName">
                     <div class="searchIcon">
-                        <img src="./assets/MagnifyingGlass.png" alt="Search Icon">
+                        <img src="/frontend/supervisor-view/assets/MagnifyingGlass.png" alt="Search Icon">
                     </div>
                     <div class="searchText">
                         <input class="searchField" type="search" placeholder="Search by Name" id="searchField">
@@ -60,7 +60,7 @@
                 <!-- Search by Institution -->
                 <div class="searchInstit">
                     <div class="searchIcon">
-                        <img src="./assets/MagnifyingGlass.png" alt="Search Icon">
+                        <img src="/frontend/supervisor-view/assets/MagnifyingGlass.png" alt="Search Icon">
                     </div>
                     <div class="searchText">
                         <input class="searchField" type="search" placeholder="Search by institution" id="searchField">
@@ -70,7 +70,7 @@
                 <!-- Search by Area of Interest -->
                 <div class="searchInterest">
                     <div class="searchIcon">
-                        <img src="./assets/MagnifyingGlass.png" alt="Search Icon">
+                        <img src="/frontend/supervisor-view/assets/MagnifyingGlass.png" alt="Search Icon">
                     </div>
                     <div class="searchText">
                         <input class="searchField" type="search" placeholder="Search by Area of Interest" id="searchField">
@@ -129,7 +129,7 @@
     <!-- =======================
          External JavaScript Files
     ========================== -->
-    <script src="./scripts/homeListView.js"></script>
+    <script src="/frontend/supervisor-view/scripts/homeListView.js"></script>
 
 </body>
 
