--- a/frontend/supervisor-view/studentProfile.html
+++ b/frontend/supervisor-view/studentProfile.html
@@ -7,10 +7,10 @@
     <title>Student Profile</title>
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="./styles/studentProfile.css">
+    <link rel="stylesheet" href="/frontend/supervisor-view/styles/studentProfile.css">
 
     <!-- jQuery Library -->
-    <script src="./scripts/jQuery v3.7.1.js"></script>
+    <script src="/frontend/supervisor-view/scripts/jQuery v3.7.1.js"></script>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <!-- ===================== HEADER ===================== -->
     <nav class="header">
         <div class="logoContain">
-            <img src="./assets/24388.svg" alt="App Logo">
+            <img src="/frontend/supervisor-view/assets/24388.svg" alt="App Logo">
         </div>
     </nav>
 
@@ -32,7 +32,7 @@
 
                 <!-- Back Arrow Icon -->
                 <div class="backArrow">
-                    <img src="./assets/backVector.svg" alt="Go Back">
+                    <img src="/frontend/supervisor-view/assets/backVector.svg" alt="Go Back">
                 </div>
 
                 <!-- Heading Text -->
@@ -55,13 +55,13 @@
 
                     <!-- Student's Current Photo -->
                     <div class="photoBox">
-                        <img src="./assets/johndoe.svg" alt="John Doe">
+                        <img src="/frontend/supervisor-view/assets/johndoe.svg" alt="John Doe">
                     </div>
 
                     <!-- Upload Trigger -->
                     <div class="uploadBox" id="uploadTrigger">
                         <div class="imgBox">
-                            <img src="./assets/picVector.png" alt="Upload Icon">
+                            <img src="/frontend/supervisor-view/assets/picVector.png" alt="Upload Icon">
                         </div>
                         <div class="txtBox">
                             Click to change Image
@@ -206,7 +206,7 @@
 
 
     <!-- ===================== SCRIPTS ===================== -->
-    <script src="./scripts/studentProfile.js"></script>
+    <script src="/frontend/supervisor-view/scripts/studentProfile.js"></script>
    
 </body>
 </html>
