--- a/frontend/user-view/studentProfile.html
+++ b/frontend/user-view/studentProfile.html
@@ -7,10 +7,10 @@
   <title>Student Profile</title>
 
   <!-- External Stylesheet -->
-  <link rel="stylesheet" href="./styles/studentProfile.css">
+  <link rel="stylesheet" href="/frontend/user-view/styles/studentProfile.css">
 
   <!-- jQuery Library -->
-  <script src="./scripts/jQuery v3.7.1.js"></script>
+  <script src="/frontend/user-view/scripts/jQuery v3.7.1.js"></script>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
   <!-- ========================== NAVBAR ========================== -->
   <nav class="header">
     <div class="logoContain">
-      <img src="./assets/24388.svg" alt="Logo">
+      <img src="/frontend/user-view/assets/24388.svg" alt="Logo">
     </div>
   </nav>
 
@@ -29,7 +29,7 @@
     <div class="heading">
       <div class="headingContain">
         <div class="backArrow">
-          <img src="./assets/backVector.svg" alt="Back">
+          <img src="/frontend/user-view/assets/backVector.svg" alt="Back">
         </div>
         <div class="headTxt">Student Profile</div>
       </div>
@@ -44,13 +44,13 @@
         <!-- Profile Picture Box -->
         <div class="profilePhoto">
           <div class="photoBox">
-            <img src="./assets/johndoe.svg" alt="Profile Picture">
+            <img src="/frontend/user-view/assets/johndoe.svg" alt="Profile Picture">
           </div>
 
           <!-- Upload Button Trigger -->
           <div class="uploadBox" id="uploadTrigger">
             <div class="imgBox">
-              <img src="./assets/picVector.png" alt="Upload Icon">
+              <img src="/frontend/user-view/assets/picVector.png" alt="Upload Icon">
             </div>
             <div class="txtBox">Click to change Image</div>
           </div>
@@ -164,9 +164,9 @@
   </section>
 
   <!-- ========================== SCRIPTS ========================== -->
-  <script src="./scripts/studentProfile.js"></script>
-  <script src="./routes/homeRoutes.js"></script>
-  <script src="./backend/studentProfile.js"></script>
+  <script src="/frontend/user-view/scripts/studentProfile.js"></script>
+  <script src="/frontend/user-view/routes/homeRoutes.js"></script>
+  <script src="/frontend/user-view/scripts/backend/studentProfile.js"></script>
 
 </body>
 </html>
