--- a/frontend/supervisor-view/log.html
+++ b/frontend/supervisor-view/log.html
@@ -10,10 +10,10 @@
     <script src="https://cdn.jsdelivr.net/npm/signature_pad@4.1.6/dist/signature_pad.umd.min.js"></script>
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="./styles/log.css">
+    <link rel="stylesheet" href="/frontend/supervisor-view/styles/log.css">
 
     <!-- jQuery -->
-    <script src="./scripts/jQuery v3.7.1.js"></script>
+    <script src="/frontend/supervisor-view/scripts/jQuery v3.7.1.js"></script>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
     =============================== -->
     <nav class="header">
         <div class="logoContain">
-            <img src="./assets/24388.svg" alt="App Logo">
+            <img src="/frontend/supervisor-view/assets/24388.svg" alt="App Logo">
         </div>
     </nav>
 
@@ -46,27 +46,27 @@
         <div class="activeBtnContainer">
             <div class="btnContain active" data-month="1">
                 <div class="monthTxt">Month 1</div>
-                <div class="checkBox"><img src="./assets/checkVector.svg" alt=""></div>
+                <div class="checkBox"><img src="/frontend/supervisor-view/assets/checkVector.svg" alt=""></div>
             </div>
             <div class="btnContain" data-month="2">
                 <div class="monthTxt">Month 2</div>
-                <div class="checkBox"><img src="./assets/checkVector.svg" alt=""></div>
+                <div class="checkBox"><img src="/frontend/supervisor-view/assets/checkVector.svg" alt=""></div>
             </div>
             <div class="btnContain" data-month="3">
                 <div class="monthTxt">Month 3</div>
-                <div class="checkBox"><img src="./assets/checkVector.svg" alt=""></div>
+                <div class="checkBox"><img src="/frontend/supervisor-view/assets/checkVector.svg" alt=""></div>
             </div>
             <div class="btnContain" data-month="4">
                 <div class="monthTxt">Month 4</div>
-                <div class="checkBox"><img src="./assets/checkVector.svg" alt=""></div>
+                <div class="checkBox"><img src="/frontend/supervisor-view/assets/checkVector.svg" alt=""></div>
             </div>
             <div class="btnContain" data-month="5">
                 <div class="monthTxt">Month 5</div>
-                <div class="checkBox"><img src="./assets/checkVector.svg" alt=""></div>
+                <div class="checkBox"><img src="/frontend/supervisor-view/assets/checkVector.svg" alt=""></div>
             </div>
             <div class="btnContain" data-month="6">
                 <div class="monthTxt">Month 6</div>
-                <div class="checkBox"><img src="./assets/checkVector.svg" alt=""></div>
+                <div class="checkBox"><img src="/frontend/supervisor-view/assets/checkVector.svg" alt=""></div>
             </div>
         </div>
 
@@ -84,14 +84,14 @@
                     <div class="cardHead">
                         <div class="status">Present</div>
                         <div class="handler">
-                            <img src="./assets/dotsVector.svg" alt="Options Icon">
+                            <img src="/frontend/supervisor-view/assets/dotsVector.svg" alt="Options Icon">
                         </div>
                     </div>
 
                     <!-- Student Photo -->
                     <div class="cardPhoto">
                         <div class="studentPhoto">
-                            <img src="./assets/johndoe.png" alt="Student Photo">
+                            <img src="/frontend/supervisor-view/assets/johndoe.png" alt="Student Photo">
                         </div>
                     </div>
 
@@ -105,22 +105,22 @@
                     <div class="majorInfoContain">
 
                         <div class="uniContain">
-                            <div class="uniIcon"><img src="./assets/schoolVector.svg" alt=""></div>
+                            <div class="uniIcon"><img src="/frontend/supervisor-view/assets/schoolVector.svg" alt=""></div>
                             <div class="Uni">Yale University</div>
                         </div>
 
                         <div class="uniContain">
-                            <div class="uniIcon"><img src="./assets/levelVector.svg" alt=""></div>
+                            <div class="uniIcon"><img src="/frontend/supervisor-view/assets/levelVector.svg" alt=""></div>
                             <div class="Uni">400L</div>
                         </div>
 
                         <div class="uniContain">
-                            <div class="uniIcon"><img src="./assets/durationVector.svg" alt=""></div>
+                            <div class="uniIcon"><img src="/frontend/supervisor-view/assets/durationVector.svg" alt=""></div>
                             <div class="Uni">6 Months</div>
                         </div>
 
                         <div class="uniContain">
-                            <div class="uniIcon"><img src="./assets/emailVector.svg" alt=""></div>
+                            <div class="uniIcon"><img src="/frontend/supervisor-view/assets/emailVector.svg" alt=""></div>
                             <div class="Uni">johndoe@gmail.com</div>
                         </div>
 
@@ -142,19 +142,19 @@
                 <div class="activeWeekBtnContain">
                     <div class="weekBtn active" data-week="1">
                         <div class="monthTxt">Week 1</div>
-                        <div class="checkBox"><img src="./assets/checkVector.svg" alt=""></div>
+                        <div class="checkBox"><img src="/frontend/supervisor-view/assets/checkVector.svg" alt=""></div>
                     </div>
                     <div class="weekBtn" data-week="2">
                         <div class="monthTxt">Week 2</div>
-                        <div class="checkBox"><img src="./assets/checkVector.svg" alt=""></div>
+                        <div class="checkBox"><img src="/frontend/supervisor-view/assets/checkVector.svg" alt=""></div>
                     </div>
                     <div class="weekBtn" data-week="3">
                         <div class="monthTxt">Week 3</div>
-                        <div class="checkBox"><img src="./assets/checkVector.svg" alt=""></div>
+                        <div class="checkBox"><img src="/frontend/supervisor-view/assets/checkVector.svg" alt=""></div>
                     </div>
                     <div class="weekBtn" data-week="4">
                         <div class="monthTxt">Week 4</div>
-                        <div class="checkBox"><img src="./assets/checkVector.svg" alt=""></div>
+                        <div class="checkBox"><img src="/frontend/supervisor-view/assets/checkVector.svg" alt=""></div>
                     </div>
                 </div>
 
@@ -235,7 +235,7 @@
 
                 <!-- Close Button -->
                 <span class="closeBtn" id="closeBtn">
-                    <img src="./assets/closeVector.svg" alt="Close Icon">
+                    <img src="/frontend/supervisor-view/assets/closeVector.svg" alt="Close Icon">
                 </span>
 
                 <!-- Modal Heading -->
@@ -258,7 +258,7 @@
     </section>
 
     <!-- Main JS Script -->
-    <script src="./scripts/log.js"></script>
+    <script src="/frontend/supervisor-view/scripts/log.js"></script>
 
 </body>
 
