Update file paths in login.html to use absolute paths for styles, images, and scripts

--- a/frontend/LOGIN/login.html
+++ b/frontend/LOGIN/login.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="./styles/login.css">
+    <link rel="stylesheet" href="/frontend/login/styles/login.css">
 </head>
 
 <body>
     <nav class="mainNav" id="mainNav">
         <div class="headerLogo" id="headerLogo">
-            <img src="./assets/24388.svg" alt="">
+            <img src="/frontend/login/assets/24388.svg" alt="">
         </div>
     </nav>
     <div class="mainContainer" id="mainContainer">
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="pageImage" id="pageImage">
-                <img src="./ASSETS/super.svg" alt="">
+                <img src="/frontend/login/ASSETS/super.svg" alt="">
             </div>
         </div>
         <div class="section2" id="section2">
@@ -59,6 +59,6 @@
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script src="./scripts/login.js"></script>
+<script src="/frontend/login/scripts/login.js"></script>
 
 </html>
