Edited backend to use window load env instead of process env

--- a/frontend/hr-view/hrDash.html
+++ b/frontend/hr-view/hrDash.html
@@ -630,6 +630,7 @@
             </div>
         </div>
     </section>
+    <script src="/frontend/config.js"></script>
     <script src="./routes/hrDashRoute.js"></script>
     <script src="./scripts/hrDash.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
