--- a/frontend/hr-view/hrGrid.html
+++ b/frontend/hr-view/hrGrid.html
@@ -1147,6 +1147,7 @@
 
 
     </section>
+    <script src="/frontend/config.js"></script>
     <script src="./scripts/hrGrid.js"></script>
     <script src="./routes/hrDashRoute.js"></script>
     <script src="./scripts/backend/studentGrid.js"></script>
