--- a/frontend/hr-view/hrstudentProfile.html
+++ b/frontend/hr-view/hrstudentProfile.html
@@ -455,6 +455,7 @@
         </div>
 
     </section>
+    <script src="/frontend/config.js"></script>
     <script src="./scripts/hrstudentProfile.js"></script>
     <script src="./scripts/backend/studentProfile.js"></script>
     <script src="./routes/hrDashRoute.js"></script>
