--- a/frontend/staff-view/homeGrid.html
+++ b/frontend/staff-view/homeGrid.html
@@ -983,6 +983,7 @@
 
 
     </section>
+    <script src="/frontend/config.js"></script>
     <script src="/frontend/staff-view/scripts/homeGrid.js"></script>
     <script src="/frontend/staff-view/routes/homeRoutes.js"></script>
     <script src="/frontend/staff-view/scripts/backend/studentGrid.js"></script>
