--- a/frontend/staff-view/studentProfile.html
+++ b/frontend/staff-view/studentProfile.html
@@ -197,6 +197,7 @@
         </div>
 
     </section>
+    <script src="/frontend/config.js"></script>
     <script src="/frontend/staff-view/scripts/studentProfile.js"></script>
     <script src="/frontend/staff-view/routes/homeRoutes.js"></script>
 </body>
