--- a/frontend/supervisor-view/homeListView.html
+++ b/frontend/supervisor-view/homeListView.html
@@ -129,6 +129,7 @@
     <!-- =======================
          External JavaScript Files
     ========================== -->
+    <script src="/frontend/config.js"></script>
     <script src="/frontend/supervisor-view/scripts/homeListView.js"></script>
 
 </body>
