--- a/frontend/supervisor-view/log.html
+++ b/frontend/supervisor-view/log.html
@@ -258,6 +258,7 @@
     </section>
 
     <!-- Main JS Script -->
+     <script src="/frontend/config.js"></script>
     <script src="/frontend/supervisor-view/scripts/log.js"></script>
 
 </body>
