--- a/frontend/supervisor-view/studentProfile.html
+++ b/frontend/supervisor-view/studentProfile.html
@@ -206,6 +206,7 @@
 
 
     <!-- ===================== SCRIPTS ===================== -->
+     <script src="/frontend/config.js"></script>
     <script src="/frontend/supervisor-view/scripts/studentProfile.js"></script>
    
 </body>
