--- a/frontend/user-view/studentCalendar.html
+++ b/frontend/user-view/studentCalendar.html
@@ -216,6 +216,7 @@
   </div>
 
   <!-- ===================== JAVASCRIPT FILES ===================== -->
+   <script src="/frontend/config.js"></script>
   <script src="/frontend/user-view/scripts/studentCalendar.js"></script>
   <script src="/frontend/user-view/routes/signout.js"></script>
   <script src="/frontend/user-view/backend/studentCalendar.js"></script>
