--- a/frontend/user-view/studentProfile.html
+++ b/frontend/user-view/studentProfile.html
@@ -164,6 +164,7 @@
   </section>
 
   <!-- ========================== SCRIPTS ========================== -->
+   <script src="/frontend/config.js"></script>
   <script src="/frontend/user-view/scripts/studentProfile.js"></script>
   <script src="/frontend/user-view/routes/homeRoutes.js"></script>
   <script src="/frontend/user-view/scripts/backend/studentProfile.js"></script>
