--- a/frontend/userlogin/login.html
+++ b/frontend/userlogin/login.html
@@ -59,6 +59,7 @@
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="/frontend/config.js"></script>
 <script src="/frontend/login/scripts/login.js"></script>
 
 </html>
