--- a/frontend/staff-view/log.html
+++ b/frontend/staff-view/log.html
@@ -425,6 +425,7 @@
 
         </div>
     </section>
+    <script src="/frontend/config.js"></script>
     <script src="/frontend/staff-view/scripts/log.js"></script>
 </body>
 
