Fix asset paths in hrDash.html to use absolute URLs for consistency

--- a/frontend/hr-view/hrDash.html
+++ b/frontend/hr-view/hrDash.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT DASHBOARD</title>
-    <link rel="stylesheet" href="./styles/hrDash.css">
+    <link rel="stylesheet" href="/frontend/hr-view/styles/hrDash.css">
     <script src="./scripts/jQuery v3.7.1.js"></script>
 </head>
 
 <body>
     <nav class="header">
         <div class="logoContain">
-            <img src="./assets/24388.svg" alt="">
+            <img src="/frontend/hr-view/assets/24388.svg" alt="">
         </div>
         <div class="logoutContain" id="logoutDropdown">
             <div class="navName">
                 John Doe
             </div>
             <div class="navPic">
-                <img src="./assets/johndoe.png" alt="">
+                <img src="/frontend/hr-view/assets/johndoe.png" alt="">
 
             </div>
         </div>
@@ -50,7 +50,7 @@
                             New Student
                         </div>
                         <div class="closeBox">
-                            <img src="./assets/close-circle.svg" alt="" id="closeModal">
+                            <img src="/frontend/hr-view/assets/close-circle.svg" alt="" id="closeModal">
                         </div>
                     </div>
 
@@ -140,7 +140,7 @@
                                 <input type="text" id="studentUnit" readonly>
                             </div>
                             <div class="caretdown" id="caretdown">
-                                <img src="./assets/CaretDown.svg" alt="">
+                                <img src="/frontend/hr-view/assets/CaretDown.svg" alt="">
                             </div>
 
                             <!-- ----------Unit dropdown -->
@@ -215,7 +215,7 @@
 
                         </div>
                         <div class="closeBox">
-                            <img src="./assets/close-circle.svg" alt="" id="closeConfirmModal">
+                            <img src="/frontend/hr-view/assets/close-circle.svg" alt="" id="closeConfirmModal">
 
                         </div>
 
@@ -244,7 +244,7 @@
                     </div>
                     <div class="modalBody">
                         <div class="successImg">
-                            <img src="./assets/Vector copy 3.png" alt="">
+                            <img src="/frontend/hr-view/assets/Vector copy 3.png" alt="">
                         </div>
                         <div class="successTxt">
                             You’ve successfully added a new student.
@@ -269,7 +269,7 @@
 
                         </div>
                         <div class="closeBox">
-                            <img src="./assets/close-circle.svg" alt="" id="closeSuperModal">
+                            <img src="/frontend/hr-view/assets/close-circle.svg" alt="" id="closeSuperModal">
 
                         </div>
                     </div>
@@ -282,7 +282,7 @@
                                 <input type="text" readonly>
                             </div>
                             <div class="caretdown">
-                                <img src="./assets/CaretDown.svg" alt="">
+                                <img src="/frontend/hr-view/assets/CaretDown.svg" alt="">
                             </div>
                             <!-- ----------Unit dropdown -->
                             <div class="unitDrop" id="superUnitDrop">
@@ -311,7 +311,7 @@
                                 <input type="text" readonly>
                             </div>
                             <div class="caretdown">
-                                <img src="./assets/CaretDown.svg" alt="">
+                                <img src="/frontend/hr-view/assets/CaretDown.svg" alt="">
                             </div>
                             <!-- ----------Supervisor dropdown -->
                             <div class="superDrop" id="superDrop">
@@ -359,12 +359,12 @@
                 </div>
             </div>
             <div class="topology">
-                <img src="./assets/Topology-1 (1) 1.svg" alt="">
+                <img src="/frontend/hr-view/assets/Topology-1 (1) 1.svg" alt="">
             </div>
             <div class="totesGender">
                 <div class="totesMale">
                     <div class="maleImg">
-                        <img src="./assets/GenderMale 1.svg" alt="">
+                        <img src="/frontend/hr-view/assets/GenderMale 1.svg" alt="">
                     </div>
                     <div class="maleTxtContain">
                         <div class="maleTxt">
@@ -379,7 +379,7 @@
                 <div class="totesFemale">
                     <div class="totesMale">
                         <div class="maleImg">
-                            <img src="./assets/GenderFemale 1.svg" alt="">
+                            <img src="/frontend/hr-view/assets/GenderFemale 1.svg" alt="">
                         </div>
                         <div class="maleTxtContain">
                             <div class="maleTxt">
@@ -410,7 +410,7 @@
                         </div>
                         <div class="teacherContain">
                             <div class="radiusContain">
-                                <img src="./assets/chalkboardTeacher.svg" alt="">
+                                <img src="/frontend/hr-view/assets/chalkboardTeacher.svg" alt="">
                             </div>
                         </div>
                     </div>
@@ -425,7 +425,7 @@
                         </div>
                         <div class="teacherContain">
                             <div class="radiusContain">
-                                <img src="./assets/usersfour.svg" alt="">
+                                <img src="/frontend/hr-view/assets/usersfour.svg" alt="">
                             </div>
                         </div>
                     </div>
@@ -631,12 +631,12 @@
         </div>
     </section>
     <script src="/frontend/config.js"></script>
-    <script src="./routes/hrDashRoute.js"></script>
-    <script src="./scripts/hrDash.js"></script>
+    <script src="/frontend/hr-view/routes/hrDashRoute.js"></script>
+    <script src="/frontend/hr-view/scripts/hrDash.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./scripts/assignSupervisor.js"></script>
-    <script src="./scripts/addStudentModal.js"></script>
-    <script src="./scripts/adminDash.js"></script>
+    <script src="/frontend/hr-view/scripts/assignSupervisor.js"></script>
+    <script src="/frontend/hr-view/scripts/addStudentModal.js"></script>
+    <script src="/frontend/hr-view/scripts/adminDash.js"></script>
 
 </body>
 
